# TensorForge

./: .gitignore  .gitlab-ci.yml  .gitmodules  AUTHORS  Dockerfile  LICENSE  MANIFEST.in  README.md  a.out  benchmark_cuda.py  benchmark_cuda_A_mul_B_band.cu  benchmark_cuda_A_mul_B_one_col_b.cu  benchmark_cuda_A_mul_B_one_row_b.cu  benchmark_cuda_A_mul_B_random_entries.cu  benchmark_cuda_A_mul_Bt_band.cu  benchmark_cuda_A_mul_Bt_one_col_b.cu  benchmark_cuda_A_mul_Bt_one_row_b.cu  benchmark_cuda_A_mul_Bt_random_entries.cu  benchmark_cuda_At_mul_B_band.cu  benchmark_cuda_At_mul_B_one_col_b.cu  benchmark_cuda_At_mul_B_one_row_b.cu  benchmark_cuda_At_mul_B_random_entries.cu  benchmark_cuda_At_mul_Bt_band.cu  benchmark_cuda_At_mul_Bt_one_col_b.cu  benchmark_cuda_At_mul_Bt_one_row_b.cu  benchmark_cuda_At_mul_Bt_random_entries.cu  compute_prof.ncu-rep  my_profile.nsys-rep  profiling_ctv.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_cuda.py  test_cuda_A_mul_B_band.cu  test_cuda_A_mul_B_one_col_b.cu  test_cuda_A_mul_B_one_row_b.cu  test_cuda_A_mul_B_random_entries.cu  test_cuda_A_mul_Bt_band.cu  test_cuda_A_mul_Bt_one_col_b.cu  (+12 more)
.ci/: Dockerfile.nvidia  Jenkinsfile  Jenkinsfile.install  Jenkinsfile.linters  Jenkinsfile.main
.ci/docker/: Dockerfile.base  Dockerfile.cuda10  Dockerfile.cuda11  Dockerfile.python
.github/workflows/: run-and-deploy-docker.yml  yateto-ci.yml
benchmarks/: requirements.txt
benchmarks/bandwidth/: CMakeLists.txt  amd.cmake  cuda_kernel.cu  global.cpp  global.cu  global_sycl.cpp  hip_kernel.cpp  include  kernel.h  nvidia.cmake  sycl.cmake  sycl_kernel.cpp
benchmarks/double-gemm/: CMakeLists.txt  amd.cmake  generate.py  main.cpp  nvidia.cmake  params.yaml  sycl.cmake
benchmarks/fused/: CMakeLists.txt  glang.py
benchmarks/gemm-chain/: CMakeLists.txt  bench.tmpl  config.yaml  generate.py  params.yaml
benchmarks/simple-gemm/: CMakeLists.txt  amd.cmake  config.yaml  generate.py  main.cpp  nvidia.cmake  params.yaml  sycl.cmake
cmake/: addGTest.cmake  addYaml.cmake  amd.cmake  cuda.cmake  enableTesting.cmake  generateCode.cmake  linkTargetGpuAndDevice.cmake  setupGpuTarget.cmake  setupOptions.cmake  setupTarget.cmake  sycl.cmake
common/: aux.h  csa.cpp  csa.h  gemm.cpp  gemm.h  initialize.cpp  initialize.h  stop_watch.h  typedef.h
common/test_drivers/: google_comparator.cpp  simple_comparator.cpp  simple_dense_sparse_driver.cpp  simple_dense_sparse_driver.h  simple_driver.cpp  simple_driver.cu  simple_driver.h  simple_driver_sycl.cpp  simple_sparse_dense_driver.cpp  simple_sparse_dense_driver.h
docs/source/: conf.py  gemmforge.rst  gemmforge.thread_policies.gemm.rst  gemmforge.thread_policies.rst  index.rst  modules.rst
example/: a_atrans_bc.py  ab_transb.py  abb_trans.py  csa.py  five_multiplies.py  four_matrices.py  four_matrices_test.py  gemm.py  mat-vec.py  mat_vec.py  redundant_load_opt.py  three_matrices.py  trace.py
examples/: SConstruct  csa.py  example.py  gemm.py  hosvd.py  initializer.py  matmul.py  minimal.py  optimal_ind.py  seissol_eqspp.py  springer.py  stock.py  tce.py  triad.py
gemmforge/: __init__.py  abstract_gemmlike_generator.py  abstract_generator.py  arch.py  basic_types.py  csa_generator.py  exceptions.py  gemm_generator.py  interfaces.py  support.py  symbol_table.py  triad_generator.py
gemmforge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
gemmforge/arch_lexic/: __init__.py  abstract_arch_lexic.py  amd_arch_lexic.py  nvidia_arch_lexic.py  sycl_arch_lexic.py
gemmforge/constructs/: code.py
gemmforge/include/: gemmforge_aux.cpp  gemmforge_aux.cu  gemmforge_aux.h  gemmforge_aux_sycl.cpp  gemmgen_aux.cpp  gemmgen_aux.cu  gemmgen_aux.h  gemmgen_aux_sycl.cpp
gemmforge/initializers/: __init__.py  abstract_initializer.py  initializer.py  initializers.py  stub_initializer.py
gemmforge/instructions/: __init__.py  allocate.py  dense_gemms.py  dense_sparse_gemms.py  gemm.py  ptr_manip.py  sparse_dense_gemms.py  store.py  sync_threads.py
gemmforge/loaders/: __init__.py  abstract_loader.py  shr_mem_loaders.py  shr_transpose_mem_loaders.py  stub_shr_mem_loader.py
gemmforge/matrix/: __init__.py  dense.py  matrix.py  sparse.py
gemmforge/thread_policies/: abstract_thread_policy.py  factory.py
gemmforge/vm/: __init__.py  hw_descr.py  vm.py
git-gemmforge/: AUTHORS  LICENSE  MANIFEST.in  setup.cfg
git-gemmforge/common/: aux.cpp  aux.h  gemm.cpp
git-gemmforge/gemmforge/: __init__.py  basic_types.py  common.py  gemm_generator.py  symbol_table.py
git-gemmforge/tests/cmake_integration/: CMakeLists.txt
include/: gemmgen_aux.h  yateto.h
kernelforge/: interface.py
kernelforge/backend/: scopes.py  symbol.py  writer.py
kernelforge/common/: aux.py  basic_types.py  context.py  operation.py
kernelforge/generators/: abstract_generator.py  csa_generator.py  descriptions.py  gemm_generator.py  generator.py  optree.py
kernelforge/include/: kernelforge_aux.cpp  kernelforge_aux.cu  kernelforge_aux.h  kernelforge_aux_sycl.cpp  kernelforge_aux_target.cpp
share/cmake/: FindGemmGen.cmake
tensorforge/: __init__.py  arch.py  aspp.py  functions.py  gemm_configuration.py  generator.py  input.py  interface.py  interop.py  support.py  type.py  util.py
tensorforge.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tensorforge/ast/: indices.py  node.py  transformer.py  visitor.py
tensorforge/backend/: data_types.py  scopes.py  symbol.py  writer.py
tensorforge/codegen/: common.py  cpp.py  factory.py  gpukernel.py  kernel.py  launcher.py  (+1 more)
tests/cmake_integration/: CMakeLists.txt  main.cpp
tests/gemms/: CMakeLists.txt  gemm_driver.h  generate.py  main.cpp  nvidia.cmake  test_loader.py
tests/gemms/testsuites/: alpha-beta-tests.yaml  loaders-tests.yaml  notrans-notrans-tests.yaml  notrans-trans-tests.yaml  trans-notrans-tests.yaml  trans-trans-tests.yaml  transpose.yaml
tests/initializers/: CMakeLists.txt  amd.cmake  generate.py  initializer_driver.h  nvidia.cmake  sycl.cmake  test_loader.py
tests/initializers/testsuites/: alpha-tests.yaml
yateto/: arch_db.yml  gemm_configuration.py  memory.py  type.py
(+344 files in other folders)
